Fix spacing between blog posts

--- a/src/_components/BlogPostPreview/BlogPostPreview.scss
+++ b/src/_components/BlogPostPreview/BlogPostPreview.scss
@@ -142,9 +142,5 @@
     &__shape {
       display: block;
     }
-
-    &:last-child {
-      padding-bottom: 3rem;
-    }
   }
 }
