--- a/src/styles/Blog.scss
+++ b/src/styles/Blog.scss
@@ -8,7 +8,11 @@
   flex-direction: column;
   flex-wrap: wrap;
   max-width: 900px;
-  gap: 1.5rem;
+  gap: 1rem;
+
+  &:last-child {
+    padding-bottom: 3rem;
+  }
 }
 
 .postCard {
